New section on the survey conclusion about the state of the art projects. Some more TODOs finished as well.

--- a/problemstatement.tex
+++ b/problemstatement.tex
@@ -64,8 +64,6 @@ In many ways, Blockchain is similar to a distributed database, and it can even b
 \label{subsec:thesis-statement}
 The main objective has already been defined: to improve the security traits, tracking of goods and processes, information synchronization, and possibly speed of delivery of the supply chain, along with other minor attributes. A seemingly good alternative that stands out is Blockchain. 
 
-\todo{fcorreia: a parte "if these attributes are really the right requirements to focus on" é mais uma consequência do resto do trabalho. acho que só deve aparecer mais tarde, e ser apresentado como uma forma de validar a abordagem}
-
 % MAIN THESIS we are defending defined here
 Therefore, the main statement that this thesis defends is: 
 
@@ -86,10 +84,6 @@ These questions are sequential, meaning that, in theory, in order to answer one 
 In the end, all the questions end up being answered and it is possible to reach a definitive conclusion towards the thesis statement. The sub-conclusions are also interesting to analyze and are a contribute themselves to this area.
 
 \section{Approach}
-% What if no possibility works or we can not ascertain the main possibility? Check other ones!
-
-% Construct the story of how the thesis came along! IMPORTANT (switch order?)
-%TODO: ANSWER THESE LAST 2 POINTS
 
 % To test the thesis, we will divide the work in 2 parts: survey and prototype;
 To answer these questions from Section~\ref{subsec:thesis-statement}, the work of this dissertation was divided into two main parts, each of them comprising a chapter:
@@ -143,20 +137,10 @@ This approach is divided into the following phases:
 \end{enumerate}
 
 After this approach is finished, the results are analyzed qualitatively, as to which use cases are implementable and usable or not and as to what were the limitations found because of the various decisions taken. Taking the various points of this analysis into consideration will allow for some conclusions to be taken in reference to the remaining question.
+
+After having answered all of the three questions that underlie the thesis statement, it is possible to analyse the validity of the thesis statement ,though future work may eventually bring different answers, since Blockchain is a technology which is seeing great and fast developments, due to the amount of research being put into it.
 % It will be conducted in the following way: 1. Requirements 2. Design 3. Implementation 4. Testing 5. Evolution
 
 %It follows a software engineering development agile pattern with phases 1 through 4 being iterated through;
 
 % Mention that survey didnt or possibly wouldnt come along soon enough to support a change in ALL the requirements, but some
-
-\subsection{Conclusions}
-
-After having answered all of the three questions that underlie the thesis statement, it is possible to give an answer, though future work may eventually bring different answers, since Blockchain is a technology which is seeing great and fast developments.
-
-\todo{fcorreia: se não houver mais o que concluir defenderia não incluir secção de conclusões neste capitulo}
-
-% Comments to pay attention to!
-
-%\todo{fcorreia: the technologies/techniques/approaches that make a blockchain are not new, I think you could even call them "traditional". They become more interesting when put together though.}
-
-%\todo{fcorreia: the last sentence of the above paragraph seems like a bit of a stretch. I think we can imagine alternative ways to do all of this without a blockchain. I do not think we want to compare blockchains with existing technologies, we want to see if blockchains *are* a good choice to implement supply chains management software that fits well with today's requirements (even if there may be other ways of achieving the same -- i.e., without a blockchain). WDYT?}
