--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -172,7 +172,7 @@ Starting with the analysis of the first question:
 
 The proof-of-concept has to not only take these use cases into account as the main applications, but also implement (or make possible the implementation of) the most important features of information systems previously analyzed.
 
-Finally, an analysis of the benefits that blockchain can bring to the supply chain, according to the respondents:
+For the second question, there is an analysis of the benefits that blockchain can bring to the supply chain, according to the respondents:
 
 \begin{itemize}
     \item The three most voted items were: \textit{"Better transaction integrity and visibility"}, \textit{"Reduction of risks (fraud/tampering/information leaks)"} and \textit{"Stronger working relationships with partners"}.
