--- a/thesis.tex
+++ b/thesis.tex
@@ -130,6 +130,9 @@
 	\todo{pedro: captions das questions na survey, compor para terem QUESTION}
 	\todo{pedro: introducao + structure}
 	\todo{pedro: abstract precisa de ser revisto de maneira a sumariar bem todo o conteúdo da tese}
+	\todo{pedro: ter os anexos}
+	\todo{pedro: ter glossario e/ou abreviacoes}
+	\todo{pedro: passar tabela estatistica para anexo}
 
 	%\subsection*{2. Naming Conventions and Definitions}
 	%glossary + abreviations    \todo{fcorreia: isto devia aparecer talvez no início do documento, num glossário geral}
