Some more TODOs. Part of the introduction rewritten.

--- a/introduction.tex
+++ b/introduction.tex
@@ -6,7 +6,13 @@
 \label{chap:introduction}
 \minitoc \mtcskip \noindent
 
-Consumer demand is growing more than ever, and with it, concerns are raised as to whether the demand can be met in a transparent and trustful way. It is difficult to know where the products we consume come from, and the processes they go through. This leads to the need of transparency in the supply chains as well as the need of an increase in their efficiency, if they are to conform to the market's needs.
+Our society is turning more consumerist, with most developed countries citizens have high consumer power. Consumers goods, from the essentials up until the entertainment goods, are manufacted and ordered continuously in high quantities.
+
+Modern supply chains feel the pressure of this growth, leading to the demand for an efficient management. Most companies are making efforts towards this end, and, though part of the answer to an efficient management lies in having efficient processes, a good management is also based in using the right technologies. Thus, the development of technologies that can satisfy the demands of supply chain management, for any industry, is in high demand.
+
+%The development of such technologies should be faced towards the problems that supply chains 
+
+%ace concerns are raised as to whether the demand can be met in a transparent and trustful way. It is difficult to know where the products we consume come from, and the processes they go through. This leads to the need of transparency in the supply chains as well as the need of an increase in their efficiency, if they are to conform to the market's needs.
 
 %\begin{quote}
 %  ``Like the Abstract, the Introduction should be written to engage the
