--- a/survey/survey4.tex
+++ b/survey/survey4.tex
@@ -70,16 +70,16 @@ The importance ranking described as before follows below:
 %Points of failure from before: traceability, inventory management is ESSENTIAL
 \begin{itemize}
 
-    \item It had already been concluded from the previous set of questions in~\ref{sec-supplychainissues} that inventory management was an essential discipline to SCM, so it was expected that \textit{Supply Control} would be rated highly as a point of improvement, which it did. The same can be said about \textit{Traceability}: it was expected to rank highly, since it is related to both quality assurance and availability of information, two other issues that were validated in the previous set of questions. At the same time, \textit{Fraud Detection} was also highly ranked, which can be explained by its relation to traceability and quality compliance and control. \textbf{Traceability helps to avoid fraud and, at the same time, fraud detection also relates to quality control and compliance, since avoiding fraud is all about making sure that the products circulating the supply chain are authentic and have good quality.} With this in mind, it is only natural that Fraud Detection is considered important, together with traceability.
+\item High Importance - It had already been concluded from the previous set of questions in~\ref{sec-supplychainissues} that inventory management was an essential discipline to SCM, so it was expected that \textit{Supply Control} would be rated highly as a point of improvement, which it did. The same can be said about \textit{Traceability}: it was expected to rank highly, since it is related to both quality assurance and availability of information, two other issues that were validated in the previous set of questions. At the same time, \textit{Fraud Detection} was also highly ranked, which can be explained by its relation to traceability and quality compliance and control. \textbf{Traceability helps to avoid fraud and, at the same time, fraud detection also relates to quality control and compliance, since avoiding fraud is all about making sure that the products circulating the supply chain are authentic and have good quality.} With this in mind, it is only natural that Fraud Detection is considered important, together with traceability.
 
-\textbf{In conclusion, from the 3 most important items, 2 of them depend directly on the third one, traceability, which makes traceability the most important point of improvement in the supply chain.}
+\textbf{In conclusion, the 3 most important items are traceability, supply control and fraud detection, with supply control and fraud detection directly depending on the traceability, which makes traceability probably the most important point of improvement in the supply chain.}
 
-\item From the items that got rated as medium importance, 2 of them relate to synchronization improvement: \textit{Automated Information Sharing} and \textit{Development of Industry Standard}. The last point, \textit{Delivery Schedules} also relates to Supply Control, though it is less generic.
+\item Medium Importance - From the items that got rated as medium importance, 2 of them relate to synchronization improvement: \textit{Automated Information Sharing} and \textit{Development of Industry Standard}. The last point, \textit{Delivery Schedules} also relates to Supply Control, though it is less generic.
 
 \textbf{In conclusion, though system synchronization is not as important as traceability or some of the other items that depend on traceability, it is still a welcome improvement which comes in second place to the others.}
 
 
-\item Finally, the lowest ranking item was \textit{Better Information Privacy}. This comes as a surprise, since security was a big focus on the background research for supply chain management. 
+\item Low Importance - Finally, the lowest ranking item was \textit{Better Information Privacy}. This comes as a surprise, since security was a big focus on the background research for supply chain management. 
 
 \textbf{The conclusion we can take from this item being rated the lowest, is that it might be a concern that the current systems already take care of, therefore it does not have much space for improvement.}
 \end{itemize}
@@ -161,7 +161,7 @@ The final important group of questions featured 2 questions about the viability 
     \label{fig:group4_graphics}
 \end{figure}
 
-Starting with the analysis of the first question:
+\textbf{Starting with the analysis of the first question}:
 \begin{itemize}
     \item \textbf{Financial transactions was, by far, the most popular choice.} The respondents look at blockchain as a way to move money as an asset, more than a tool to manage the goods themselves, since traditional systems only deal with data and the money is dealt with by third parties (banks). It makes sense that \textbf{the second most voted choice is Contract Enforcement.} As per the background research and state of the art, it was pointed out that some of the applications already enforce payments through contracts, when the goods are delivered,for instance, without the need of a third party (thus reducing fees). Financial transactions and contract management go hand in hand. 
      
@@ -170,9 +170,9 @@ Starting with the analysis of the first question:
 
 \end{itemize}
 
-The proof-of-concept has to not only take these use cases into account as the main applications, but also implement (or make possible the implementation of) the most important features of information systems previously analyzed.
+The proof-of-concept has to not only take these use cases into account as the main applications, but also implement (or make possible the implementation of) the most important features of information systems previously analyzed, which makes the second question complementary of the first one.
 
-For the second question, there is an analysis of the benefits that blockchain can bring to the supply chain, according to the respondents:
+\textbf{For the second question, there is an analysis of the benefits that blockchain can bring to the supply chain, according to the respondents}:
 
 \begin{itemize}
     \item The three most voted items were: \textit{"Better transaction integrity and visibility"}, \textit{"Reduction of risks (fraud/tampering/information leaks)"} and \textit{"Stronger working relationships with partners"}.
@@ -189,8 +189,8 @@ For the second question, there is an analysis of the benefits that blockchain ca
 This was the most important group of questions in that it provides direct information as to which functionalities the proposed system design should possess and implement. At the same time, these functionalities can be related to the points of improvement found, as well as to the issues validated in the previous groups of questions.
 
 \begin{itemize}
-    \item From question group 3, we validated that \textbf{inventory management}, \textbf{quality assurance} and \textbf{getting accurate and timely data} are issues in the supply chain. On this group, the main points of improvement were found to focus on: \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. In a generalized way, the common links to both issues and points of improvement seem to be \textbf{security}, \textbf{traceability} and \textbf{synchronization}, effectively validating the initial concerns from the problem statement.
-    \item Another important conclusion to take from this set of questions are the features to include in the design for the blockchain system. These include the \textit{"Blockchain only features"}, functionalities implemented in an unique to the blockchain, as well as the standard \textit{"Information system features"}, which are the features that were found to be the most important to information systems in a supply chain.
+    \item From question group 3, some issues in the supply chain were validated: \textbf{inventory management}, \textbf{quality assurance} and \textbf{getting accurate and timely data}. On this group, the main points of improvement were found to focus on: \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. In a generalized way, the common links to both issues and points of improvement seem to be: \textbf{security}, \textbf{traceability} and \textbf{synchronization}, effectively validating the initial concerns from the problem statement.
+    \item Another important conclusion to take from this set of questions are the features to include in the design for the blockchain system. These include the \textit{\textbf{"Blockchain only features"}}, functionalities implemented in an unique to the blockchain, as well as the standard \textit{\textbf{"Information system features"}}, which are the features that were found to be the most important to information systems in a supply chain.
     \item By order of importance, the blockchain features are:
     \begin{itemize}
         \item Financial transactions.
