--- a/survey/surveyconclusion.tex
+++ b/survey/surveyconclusion.tex
@@ -13,6 +13,8 @@ Most of the conclusions for the survey were summarized in the analysis of questi
 
 \par \textbf{Point of improvement} - These include \textbf{traceability}, \textbf{supply control}, \textbf{fraud detection} and \textbf{synchronization}. These items reflect themselves on the feature requirements that were elicited. The results can therefore be crossed with the points of improvement to make more refined logical groups of requirements:
 
+\par \textbf{Important Features} - The most important features, gathered from a junction of information system features and blockchain features, are summarized in Table \ref{table:elicited-requirements-survey}.
+
 %%% TABLE START %%%%%%%%%%%
 % Please add the following required packages to your document preamble:
 % \usepackage{multirow}
@@ -40,9 +42,6 @@ Most of the conclusions for the survey were summarized in the analysis of questi
 %%% TABLE END %%%%%%%%%%%%%%%
 
 These are important contributions from the experts of the area, though with a bigger sample, the answers would have been more representative. The next chapter will focus on these requirements as the major points of focus for the design.
-%TODO: bigger conclusion
-
-
 
 
 %subsection: relate to what the already existing projects do
