--- a/thesis.tex
+++ b/thesis.tex
@@ -122,10 +122,11 @@
 	\mainmatter
 
 	\todo{pedro: compor captions das tabelas, por em cima e com nome correto}
+	\todo{pedro: fix the use of abbreviations so that they are more consistent}
 	\todo{pedro: compor tamanhos das tabelas}
 	\todo{pedro: por so 2 casas decimais nas tabelas}
 	\todo{pedro: compor imagens dos graficos}
-	\todo{pedro: consistent with the use of bold or italic, especially on thesis questions}
+	\todo{pedro: consistent with the use of bold or italic, especially on thesis questions and in the items of the survey}
 	\todo{pedro: corrigir localizacoes das figuras}
 	\todo{pedro: captions das questions na survey, compor para terem QUESTION}
 	\todo{pedro: introducao + structure}
